--- a/index.html
+++ b/index.html
@@ -15,13 +15,15 @@
         <div class="Monokai-Code" style="min-height:480px;white-space: normal;">
             <p>
                 Добро пожаловать на страничку, посвящённую самым часто задаваемым вопросам по QSP.
-            </p><p> Изначально эта страничка создавалась для <span class="Monokai-String">Справочника по самым часто задаваемым вопросам из темы "Как сделать?" на форуме  <a href="https://qsp.org/index.php?option=com_agora&Itemid=57" title="перейти на форум" target="_blank" style="text-decoration: none;"><span class="Monokai-Operator">QSP.org</span></a></span>, но в течение некоторого времени приросли ещё два раздела, поэтому теперь страничка посвящена более широкому кругу вопросов.
+            </p>
+            <p>Изначально эта страничка создавалась для <span class="Monokai-String">Справочника по самым часто задаваемым вопросам из темы "Как сделать?" на форуме  <a href="https://qsp.org/index.php?option=com_agora&Itemid=57" title="перейти на форум" target="_blank" style="text-decoration: none;"><span class="Monokai-Operator">QSP.org</span></a></span>, но в течение некоторого времени приросли ещё два раздела, поэтому теперь страничка посвящена более широкому кругу вопросов.
             </p>
             <p>За исключением данной страницы весь справочник генерируется из исходников, поэтому возможны огрехи и разные некрасивости. По мере необходимости и возможности я буду эти огрехи устранять.</p>
             <p>Если вы нашли какую-либо ошибку или неточность, просьба заскринить её вместе с адресом страницы и выслать мне на <span class="Monokai-UnFunc">aleksversus@mail.ru</span>. Это поможет улучшению и исправлению справочника.</p>
             <p>Ещё вы можете написать мне в VK, это не возбраняется: <a href="https://vk.com/id40090736" style="text-decoration: none;" target="_blank"><span class="Monokai-Numeric">id40090736</span></a>.</p>
             <p>Подсветка блоков кода JS пока не сделана, код в этих блоках будет подсвечен неправильно. В остальном же всё должно работать.</p>
             <p>Онлайн-версия <span class="Monokai-String">Справочника по самым часто задаваемым вопросам из темы "Как сделать?" на форуме  <a href="https://qsp.org/index.php?option=com_agora&Itemid=57" title="перейти на форум" target="_blank" style="text-decoration: none;"><span class="Monokai-Operator">QSP.org</span></a></span> по прежнему доступна как отдельный раздел.</p>
+            <p>В настоящее время справочник переписывается под QSP версии 5.8.0, это новый классический плеер и qSpider. Раздел по Quest Navigator будет исключён, весь код будет переписан под 5.8.0, многие примеры окажутся нерабочими для плееров версии 5.7.0. Если вам нужен справочник для 5.7.0, есть <a href="https://aleksversus.github.io/howdo_faq/release/F.A.Q.HowDo for QSP 5.7.0.zip" style="text-decoration: none;">копия онлайн-версии</a>, а так же старые релизы офлайн-версии.</p>
             
             <h6><span class="Monokai-Func">Справочник по самым часто задаваемым вопросам из темы "Как сделать?":</span></h6>
            
