--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             </p>
             <p>Изначально эта страничка создавалась для <span class="Monokai-String">Справочника по самым часто задаваемым вопросам из темы "Как сделать?" на форуме  <a href="https://qsp.org/index.php?option=com_agora&Itemid=57" title="перейти на форум" target="_blank" style="text-decoration: none;"><span class="Monokai-Operator">QSP.org</span></a></span>, но в течение некоторого времени приросли ещё два раздела, поэтому теперь страничка посвящена более широкому кругу вопросов.
             </p>
-            <p>За исключением данной страницы весь справочник генерируется из исходников, поэтому возможны огрехи и разные некрасивости. По мере необходимости и возможности я буду эти огрехи устранять.</p>
+            <p>За исключением данной страницы весь справочник генерируется из <a href="https://github.com/AleksVersus/howdo_faq" style="text-decoration: none;"><span class="Monokai-Operator">исходников</span></a>, поэтому возможны огрехи и разные некрасивости. По мере необходимости и возможности я буду эти огрехи устранять.</p>
             <p>Если вы нашли какую-либо ошибку или неточность, просьба заскринить её вместе с адресом страницы и выслать мне на <span class="Monokai-UnFunc">aleksversus@mail.ru</span>. Это поможет улучшению и исправлению справочника.</p>
             <p>Ещё вы можете написать мне в VK, это не возбраняется: <a href="https://vk.com/id40090736" style="text-decoration: none;" target="_blank"><span class="Monokai-Numeric">id40090736</span></a>.</p>
             <p>Подсветка блоков кода JS пока не сделана, код в этих блоках будет подсвечен неправильно. В остальном же всё должно работать.</p>
